--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,32 @@
 /* Global */
-html, body {
+html, body, h2 {
     margin: 0;
     padding: 0;
 }
 body {
     font-family: 'Muli';
-    background-color: #2D93AD; /*  #6C809A; #2D93AD;*/
-    color: #B5FFE1;
+    color: #B5FFE1; 
+    background-color: #2d9cad; /*  #6C809A; #2D93AD;*/
 }
 h1 {
     font-family: 'Space Mono'; 
-    color: #FF9F29;
+}
+
+h1, .legend, a, a:hover, a:visited { /* Change the link color */
+    color: #ecc100;
+    font-weight: bolder;}
+
+a { /* Change the link color */
+    text-decoration: none; /* Remove underlines by default */
+    /*
+            background-color: #090909;
+            border-radius: 10px;
+            padding: 2px 5px;
+            font-weight: bolder;
+            */    
+}
+a:hover { /* Change link color on hover */
+    text-decoration: underline;
 }
 hr {
     border-color: #B5FFE1;
@@ -29,28 +45,29 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 5%; /* top right bottom left */
-    
+    padding: 5% 10%; /* top right bottom left */
 }
-header .flex-item {
-    flex-grow: 2;
-}
-header .flex-container2a {
+header .logo {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: first baseline;
 }
-header .flex-container2b {
+header .name {
+
+}
+header .contact {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: first baseline;
 }
-header flex-item2a {
- 
+header figure {
+    width: 5em; 
+    margin: 0%;
+    margin-right: 1em;
 }
-header .flex-item2b {
+header a {
     font-size:xxx-large;
     margin-left: 0.2em;
 }
@@ -58,7 +75,7 @@ header .flex-item2b {
 /* Main */
 
 main {
-    
+    padding: 0% 10%; /* top right bottom left */
 }
 main section {
     display: flex;
@@ -66,43 +83,19 @@ main section {
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 5%;
-    margin: 0% 5%;
 }
 main article {
     flex: 1;
-    flex-basis: calc(1%/2);
+    flex-basis: calc(85%/3);
 }
 img {
     max-width: 100%;
     border-radius: 25px;
 }
 
-/* Change the link color */
-a { /* Change the link color */
-    color: #ECA400;
-    /*
-            background-color: #090909;
-            border-radius: 10px;
-            padding: 2px 5px;
-            font-weight: bolder;
-            */
-    text-decoration: none;
-    /* Remove underlines by default */
-}
-a:hover { /* Change link color on hover */
-    color: #ECA400;
-    font-weight: bolder;
-    text-decoration: underline;
-    /* Add underlines on hover */
-}
-a:visited { /* Change link color when visited */
-    color: #ECA400;
-    font-weight: bolder;
-}
-
 /* Footer */
-footer p {
-    margin-left: 7%;
+footer {
+    padding: 1% 10%; /* top right bottom left */
 }
 
 
@@ -113,6 +106,7 @@ footer p {
         https://colorhunt.co/palette/0000001a4d2eff9f29faf3e3
         #FAF3E3;  #1A4D2E;  #FF9F29; #000000;
         https://coolors.co/090909-b5ffe1-eca400-6c809a 
+        https://coolors.co/000000-5bc0eb-fde74c-9bc53d-c3423f 
         
         div {
             background-color: grey;
